--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 version: 1.0.{build}
-image: Visual Studio 2019
+image: Ubuntu
 
 max_jobs: 1
 
@@ -11,7 +11,9 @@ install:
 
 build_script:
   - echo Build step
-  # - sh : ./Lab1/rebuild.sh
+  - cd Lab1
+  # - sh : rebuild.sh
+  - cd ..
   
 test_script:
   - echo Test step
