--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,7 @@ test_script:
   - cd client
   #- go run clientTests.go
   - sleep 30
+  - docker ps -a
   - go run clientTests.go
   - cd ..
   - cd ..
